src/test/compile-fail/refutable-pattern-in-fn-arg.rs
fn main() {
    let f = |3: int| io::println("hello");  //~ ERROR refutable pattern
    f(4);
}

